# dithering

./: .gitignore  LICENSE  README.md  dither.py  dodither.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tests.py
