[metadata]
name = dithering
description = Package for Doing Floyd-Steinberg Dithering
author = Liam Axon
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = 
    .
install_requires = 
    numpy>=1
python_requires =
    >=3.8
package_dir =
    =..
zip_safe =
    no

[options.package_data]
dithering =
    py.typed

[flake8]
max-line-length =
    160

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
