[metadata]
name = dithering
version = 1.0.0
description = Package for Doing Floyd-Steinberg Dithering
author = Liam Axon
url = https://github.com/liaxon/dithering
keywords = pillow, dither, floyd-steinberg, special effect
license = MIT
license_file = LICENSE

[options]
install_requires = 
    numpy>=1
    pillow>=9
python_requires =
    >=3.8
package_dir =
    =.
zip_safe =
    no

[options.package_data]
dithering =
    py.typed

[flake8]
max-line-length =
    160

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
